tests/baselines/reference/createArray.errors.txt
==== tests/cases/compiler/createArray.ts (7 errors) ====
    var na=new number[];
                     ~~
!!! error TS2068: 'new T[]' cannot be used to create an array. Use 'new Array<T>()' instead.
               ~~~~~~
!!! error TS2095: Could not find symbol 'number'.
    
    class C {
    }
    
    new C[];
         ~~
!!! error TS2068: 'new T[]' cannot be used to create an array. Use 'new Array<T>()' instead.
    var ba=new boolean[];
                      ~~
!!! error TS2068: 'new T[]' cannot be used to create an array. Use 'new Array<T>()' instead.
               ~~~~~~~
!!! error TS2095: Could not find symbol 'boolean'.
    var sa=new string[];
                     ~~
!!! error TS2068: 'new T[]' cannot be used to create an array. Use 'new Array<T>()' instead.
               ~~~~~~
!!! error TS2095: Could not find symbol 'string'.
    function f(s:string):number { return 0;
    }
    if (ba[14]) {
        na[2]=f(sa[3]);
    }
    
    new C[1]; // not an error